--- a/app/src/main/res/layout/fragment_challenge_nearby.xml
+++ b/app/src/main/res/layout/fragment_challenge_nearby.xml
@@ -4,13 +4,9 @@
     android:layout_height="match_parent"
     tools:context=".ChallengeFragment">
 
-    <com.esri.android.map.MapView
-        android:id="@+id/map"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        mapoptions.MapType="Streets"
-        mapoptions.center="34.056215, -117.195668"
-        mapoptions.ZoomLevel="16">
-    </com.esri.android.map.MapView>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/hello_blank_fragment"/>
 
 </FrameLayout>
