Added store fragment

--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -5,6 +5,7 @@
     <color name="ColorPrimaryDark">#984807</color>
     <color name="ColorAccent">#FAC090</color>
 
+    <color name="colorAccent2">#FAC090</color>
     <color name="lightOrange">#FFE2BA</color>
     <color name="lightGrey">#F2F2F2</color>
     <color name="heartRed">#C00000</color>
