--- a/app/src/main/res/layout/fragment_challenge_nearby.xml
+++ b/app/src/main/res/layout/fragment_challenge_nearby.xml
@@ -4,9 +4,17 @@
     android:layout_height="match_parent"
     tools:context=".ChallengeFragment">
 
-    <TextView
+    <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment"/>
+        android:id="@+id/swipe_refresh">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/nearby_challenge_recycler_view"
+            android:scrollbars="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="4dp" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </FrameLayout>
