Challenge details dialog fragment layout

--- a/app/src/main/res/layout/challenge_details.xml
+++ b/app/src/main/res/layout/challenge_details.xml
@@ -1,11 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:weightSum="1">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="133dp"
+            android:orientation="horizontal"
+            android:layout_gravity="fill_horizontal"
+            android:layout_weight="0.04">
+            <ImageView
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/challenge_chocolate_origin" />
+            <ImageView
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/challenge_burger"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="86dp"
+            android:orientation="horizontal"
+            >
+            <ImageView
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/challenge_wings"/>
+            <ImageView
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/coupon_burger"/>
+            <ImageView
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/coupon_chocolate_origin"/>
+        </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/picture"
+        android:id="@+id/relativeLayout"
+        android:background="@color/ColorAccent"
+        android:padding="3dp"
+        android:layout_gravity="center_horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_location_on_black_24dp"
+            android:layout_toLeftOf="@+id/textView2" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Little Sheep Hotpot"
+            android:id="@+id/textView"
+            android:padding="5dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0.4mi"
+            android:padding="5dp"
+            android:textStyle="bold"
+            android:id="@+id/textView2"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignBottom="@+id/textView" />
+    </RelativeLayout>
+
+    <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="HELLO IT'S ME. I'M EATING GOOD FOOD. COME JOIN ME NAO."
+    android:id="@+id/textView3"
+    android:padding="5dp"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
+    android:layout_gravity="center_horizontal"
+    android:layout_weight="0.04" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Challenge Details"
-        android:id="@+id/textView" />
+        android:text="Challenge duration: 6 days left"
+        android:id="@+id/textView4"
+        android:padding="5dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.04" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/caption"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.04">
+
+        <Button
+            style="?attr/borderlessButtonStyle"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Join"
+            android:id="@+id/challenge_join" />
+
+        <Button
+            style="?attr/borderlessButtonStyle"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Pictures"
+            android:id="@+id/challenge_view_photos" />
+
+        <Button
+            style="?attr/borderlessButtonStyle"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Uber"
+            android:id="@+id/challenge_uber" />
+    </LinearLayout>
+
 </LinearLayout>
