--- a/app/src/main/res/layout/challenge_card.xml
+++ b/app/src/main/res/layout/challenge_card.xml
@@ -88,19 +88,29 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/caption">
                 <Button
-                    android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     style="?attr/borderlessButtonStyle"
                     android:text="Join"
                     android:id="@+id/challenge_join"/>
                 <Button
-                    android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    style="?attr/borderlessButtonStyle"
+                    android:text="Later"
+                    android:id="@+id/challenge_later"/>
+                <Button
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     style="?attr/borderlessButtonStyle"
                     android:text="Details"
                     android:id="@+id/challenge_details"/>
                 <Button
-                    android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     style="?attr/borderlessButtonStyle"
                     android:text="Uber"
