Uber floating action button!

--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -13,4 +13,5 @@
     <color name="black">#000000</color>
     <color name="twitterBlue">#55ACEE</color>
     <color name="facebookBlue">#3b5998</color>
+    <color name="uber">#003438</color>
 </resources>
