--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,7 +20,7 @@
             android:icon="@drawable/ic_shopping_cart_black_24dp"
             android:title="@string/store" />
         <item
-            android:id="@+id/nav_favorites"
-            android:title="@string/favorites" />
+            android:id="@+id/nav_trip_experiences"
+            android:title="@string/trip_experiences" />
     </group>
 </menu>
