--- a/app/src/main/res/layout/challenge_details.xml
+++ b/app/src/main/res/layout/challenge_details.xml
@@ -62,13 +62,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_location_on_black_24dp"
-            android:layout_toLeftOf="@+id/textView2" />
+            android:layout_toLeftOf="@+id/challenge_distance" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Little Sheep Hotpot"
-            android:id="@+id/textView"
+            android:id="@+id/challenge_restaurant"
             android:padding="5dp"
             android:textStyle="bold" />
 
@@ -78,17 +78,17 @@
             android:text="0.4mi"
             android:padding="5dp"
             android:textStyle="bold"
-            android:id="@+id/textView2"
+            android:id="@+id/challenge_distance"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_alignBottom="@+id/textView" />
+            android:layout_alignBottom="@+id/challenge_restaurant" />
     </RelativeLayout>
 
     <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="HELLO IT'S ME. I'M EATING GOOD FOOD. COME JOIN ME NAO."
-    android:id="@+id/textView3"
+    android:id="@+id/caption"
     android:padding="5dp"
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
@@ -99,7 +99,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Challenge duration: 6 days left"
-        android:id="@+id/textView4"
+        android:id="@+id/challenge_duration"
         android:padding="5dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
