--- a/app/src/main/res/layout/challenge_card.xml
+++ b/app/src/main/res/layout/challenge_card.xml
@@ -17,72 +17,87 @@
             android:layout_height="match_parent"
             android:padding="5dp"
             android:background="@color/white">
-            <TextView
+
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Diamond Peak"
-                android:id="@+id/merchant_name"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="10 days left"
-                android:id="@+id/challenge_duration"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
+                android:id="@+id/title"
+                android:orientation="vertical"
+                android:layout_centerHorizontal="true">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20dp"
+                    android:text="The"
+                    android:id="@+id/the"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="25dp"
+                    android:textColor="@color/black"
+                    android:text="Diamond Peak"
+                    android:id="@+id/merchant_name"
+                    android:layout_below="@id/the" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20dp"
+                    android:text="Challenge"
+                    android:id="@+id/challenge"
+                    android:layout_below="@id/merchant_name"
+                    android:layout_gravity="right"/>
+
+            </LinearLayout>
+
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/picture"
-                android:layout_below="@+id/merchant_name"
+                android:layout_below="@+id/title"
                 android:adjustViewBounds="true"
                 android:layout_centerHorizontal="true"
-                android:scaleType="fitCenter" />
+                android:scaleType="fitCenter"
+                android:padding="10dp"/>
 
-            <RelativeLayout
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
                 android:layout_below="@id/picture"
-                android:id="@+id/challenge_info"
-                android:background="@color/ColorAccent"
-                android:padding="3dp">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Little Sheep Hotpot"
-                    android:id="@+id/challenge_restaurant"
-                    android:padding="5dp"
-                    android:textStyle="bold"/>
-
+                android:id="@+id/distance_layout"
+                android:orientation="horizontal">
                 <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_location_on_black_24dp"
-                    android:layout_toLeftOf="@+id/challenge_distance"/>
+                    android:layout_height="18dp"
+                    android:src="@drawable/ic_location_on_black_24dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="0.4mi"
-                    android:padding="5dp"
-                    android:textStyle="bold"
-                    android:id="@+id/challenge_distance"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignBottom="@id/challenge_restaurant"/>
-            </RelativeLayout>
+                    android:text="99 mi"
+                    android:id="@+id/challenge_distance"/>
+            </LinearLayout>
+
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="10 days left"
+                android:id="@+id/challenge_duration"
+                android:layout_below="@id/distance_layout"
+                android:layout_centerHorizontal="true"/>
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Take part and stand to win prizes"
                 android:id="@+id/caption"
                 android:padding="5dp"
-                android:layout_below="@id/challenge_info"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:layout_below="@id/challenge_duration"
+                android:layout_centerHorizontal="true"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
