--- a/app/src/main/res/layout/uber_toolbar.xml
+++ b/app/src/main/res/layout/uber_toolbar.xml
@@ -9,5 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Uber Trip Experiences"
-        android:textSize="18dp"/>
+        android:textSize="18dp"
+        android:textColor="@color/white"/>
+
 </android.support.v7.widget.Toolbar>
