add uber page toolbar

--- a/app/src/main/res/layout/activity_uber_trip_experience.xml
+++ b/app/src/main/res/layout/activity_uber_trip_experience.xml
@@ -5,8 +5,12 @@
     android:background="@color/uberActivityBackground"
     tools:context="com.space.apic.UberTripExperience">
 
+    <include layout="@layout/uber_toolbar"
+        android:id="@+id/toolbar"/>
+
     <VideoView
         android:id="@+id/video_player"
+        android:layout_below="@id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
