--- a/app/src/main/res/drawable/side_nav_gradient.xml
+++ b/app/src/main/res/drawable/side_nav_gradient.xml
@@ -1,9 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="90"
-        android:centerColor="@color/ColorAccent"
-        android:endColor="@color/lightOrange"
+        android:angle="180"
+        android:centerColor="@color/yellow"
+        android:endColor="@color/yellow"
         android:startColor="@color/ColorPrimary"
         android:type="linear" />
 </shape>
