--- a/app/src/main/res/layout/home_card.xml
+++ b/app/src/main/res/layout/home_card.xml
@@ -102,19 +102,16 @@
                 style="?attr/borderlessButtonStyle"
                 android:text="View Challenge"
                 android:id="@+id/view_challenge_btn"/>
-            <ImageView
-                android:src="@drawable/ic_star_border_black_24dp"
-                android:tag="@drawable/ic_star_border_black_24dp"
+
+            <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/caption"
-                android:layout_alignBottom="@id/view_challenge_btn"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
-                android:id="@+id/star"
-                android:padding="8dp"
-                android:tint="@color/ColorPrimary"
-                />
+                style="?attr/borderlessButtonStyle"
+                android:text="Later"
+                android:id="@+id/fav_btn"/>
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
