--- a/app/src/main/res/layout/activity_uber_trip_experience.xml
+++ b/app/src/main/res/layout/activity_uber_trip_experience.xml
@@ -20,6 +20,7 @@
         android:id="@+id/title"
         android:layout_below="@id/video_player"
         android:orientation="horizontal"
+        android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true">
 
         <TextView
@@ -76,7 +77,8 @@
         android:textColor="@color/white"
         android:layout_below="@id/progressBar"
         android:layout_gravity="bottom"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"/>
 
     <android.support.v7.widget.RecyclerView
         xmlns:android="http://schemas.android.com/apk/res/android"
