--- a/app/src/main/res/layout/uber_gallery_card.xml
+++ b/app/src/main/res/layout/uber_gallery_card.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_margin="5dp">
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -10,6 +11,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/caption"/>
+        android:id="@+id/caption"
+        android:layout_centerHorizontal="true"/>
 
 </LinearLayout>
