--- a/app/src/main/res/layout/uber_gallery_card.xml
+++ b/app/src/main/res/layout/uber_gallery_card.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:layout_margin="5dp">
+
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/image"/>
+        android:layout_width="200dp"
+        android:layout_height="150dp"
+        android:scaleType="fitCenter"
+        android:id="@+id/image"
+        android:src="@drawable/challenge_ski"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="TEST"
         android:id="@+id/caption"
-        android:layout_centerHorizontal="true"/>
+        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
