--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -18,7 +18,7 @@
         android:text="APic"
         android:textSize="40sp"
         android:gravity="center"
-        android:textColor="@color/white"
+        android:textColor="@color/ColorPrimaryDark"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
