--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -8,7 +8,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="52dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     
@@ -18,7 +18,7 @@
         android:text="APic"
         android:textSize="40sp"
         android:gravity="center"
-        android:textColor="@color/ColorPrimaryDark"
+        android:textColor="@color/white"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -33,7 +33,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:textSize="18sp"
-        android:textColor="@color/black"/>
+        android:textColor="@color/ColorAccent"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -44,7 +44,7 @@
         android:layout_alignBottom="@+id/drawer_name"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:textColor="@color/black"/>
+        android:textColor="@color/ColorAccent"/>
 
     <ImageView
         android:layout_width="wrap_content"
